--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+@font-face {
+  font-family: Reef;
+  src: local("fontes/glyphicons-halflings-regular.woff2"),
+    url("fontes/glyphicons-halflings-regular.woff2"), format("woff");
+}
+
 /*body style*/
 body {
   overflow-x: hidden;
